--- a/website/src/components/settings/execute/Execute.module.css
+++ b/website/src/components/settings/execute/Execute.module.css
@@ -26,7 +26,7 @@
 .menu {
   min-width: auto;
   background-color: transparent;
-  padding: 0 !important;
+  padding: 0;
 }
 
 .item {
@@ -46,7 +46,7 @@
   border: 1px solid var(--text-dark);
   background-color: var(--white);
   transform: scale(0);
-  animation: scale 0.3s forwards;
+  animation: scale 0.3s forwards 0s;
 }
 
 .item:nth-child(2) {
