--- a/website/src/components/settings/mode/Mode.module.css
+++ b/website/src/components/settings/mode/Mode.module.css
@@ -26,7 +26,7 @@
 .menu {
   min-width: auto;
   background-color: transparent;
-  padding: 0 !important;
+  padding: 0;
 }
 
 .item {
@@ -39,14 +39,14 @@
   align-items: center;
   justify-content: center;
 
-  margin-top: var(--pt05);
+  margin-bottom: var(--pt05);
 
   font-size: var(--pt2);
 
   border: 1px solid var(--text-dark);
   background-color: var(--white);
   transform: scale(0);
-  animation: scale 0.3s forwards;
+  animation: scale 0.3s forwards 0.2s;
 }
 
 .item:nth-child(2) {
@@ -54,7 +54,7 @@
 }
 
 .item:last-child {
-  animation: scale 0.3s forwards 0.2s;
+  animation: scale 0.3s forwards 0s;
 }
 
 @keyframes scale {
